# AutomationTest

CryptoAutomationTest/: pyproject.toml  readme.md
CryptoAutomationTest/APIVerification/BaseFunction/: common.py
CryptoAutomationTest/APIVerification/tests/: test_happypath.py  test_others.py
CryptoAutomationTest/AppUIVerification/Basefucntion/: basepage.py  conftest.py
CryptoAutomationTest/AppUIVerification/tests/: test_app.py
CryptoAutomationTest/generate_pyramid/: generate_pyramid.py
